--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,18 +3,18 @@ version: '3.7'
 services:
    # change the service name, the container name and the hostname for each dev container that connects
    # to the same virtual network. [Manfred, 29jul2022]
-   typescript-dev:
-      image: typescript-dev:0.1
+   express-testing-dev:
+      image: express-testing-dev:0.1
       build: .
-      container_name: typescript-dev
-      hostname: typescript-dev.local
+      container_name: express-testing-dev
+      hostname: express-testing-dev.local
       working_dir: /work
       ports:
          # Change the port number in case you have more than one dev container based on this
          # template. For example, you could use something like:
          # - "3100:3000"
          # [Manfred, 29jul2022]
-         - "3000:3000" # <<<<<< if preferred, explicit forward the port used by express
+         - "21003:21003" # <<<<<< if preferred, explicit forward the port used by express
          # Using double quotes for port mapping to avoid YAML reading it as a number with a different base
          # e.g. "3333:22" would result in port numbers greater than 130000 which are clearly invalid.
          # Without double quotes YAML interprets it as a number based on 22. [Manfred, 24aug2022]
