--- a/service/package.json
+++ b/service/package.json
@@ -4,9 +4,20 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "build": "tsc",
+      "dev": "nodemon",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "upgrade-all": "npx -yes -p npm-check-updates ncu -u && npm install"
    },
    "keywords": [],
    "author": "",
-   "license": "MIT"
+   "license": "MIT",
+   "dependencies": {
+      "express": "4.18.1"
+   },
+   "devDependencies": {
+      "@types/express": "4.17.14",
+      "nodemon": "2.0.20",
+      "ts-node": "10.9.1"
+   }
 }
