--- a/service/package.json
+++ b/service/package.json
@@ -7,7 +7,8 @@
    "scripts": {
       "build": "tsc",
       "dev": "nodemon",
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "_test": "jest",
+      "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest --verbose",
       "upgrade-all": "npx -yes -p npm-check-updates ncu -u && npm install"
    },
    "keywords": [],
@@ -18,7 +19,12 @@
    },
    "devDependencies": {
       "@types/express": "4.17.14",
+      "@types/jest": "29.1.1",
+      "@types/supertest": "2.0.12",
+      "jest": "29.1.2",
       "nodemon": "2.0.20",
+      "supertest": "6.2.4",
+      "ts-jest": "29.0.3",
       "ts-node": "10.9.1"
    }
 }
