--- a/service/package.json
+++ b/service/package.json
@@ -5,17 +5,21 @@
    "main": "index.js",
    "type": "module",
    "scripts": {
-      "build": "tsc",
+      "build": "tsoa spec-and-routes && tsc",
       "dev": "nodemon",
       "_test": "jest",
       "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest --verbose",
+      "pre-commit": "npm ci && npm run build && npm test",
       "upgrade-all": "npx -yes -p npm-check-updates ncu -u && npm install"
    },
    "keywords": [],
    "author": "",
    "license": "MIT",
    "dependencies": {
-      "express": "4.18.1"
+      "@types/swagger-ui-express": "4.1.3",
+      "express": "4.18.1",
+      "swagger-ui-express": "4.5.0",
+      "tsoa": "5.0.0-alpha.1"
    },
    "devDependencies": {
       "@types/express": "4.17.14",
