--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,5 +1,6 @@
 {
    "compilerOptions": {
+      "experimentalDecorators": true,
       /* Visit https://aka.ms/tsconfig to read more about this file */
       /* Projects */
       // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
@@ -24,7 +25,7 @@
       // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
       // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
       /* Modules */
-      "module": "ES2022", /* Specify what module code is generated. */
+      "module": "ESNext", /* Specify what module code is generated. */
       // "rootDir": "./",                                  /* Specify the root folder within your source files. */
       "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
       // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -34,7 +35,7 @@
       // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
       // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
       // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
-      // "resolveJsonModule": true,                        /* Enable importing .json files. */
+      "resolveJsonModule": true, /* Enable importing .json files. */
       // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
       /* JavaScript Support */
       // "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
